--- a/index.html
+++ b/index.html
@@ -500,11 +500,11 @@
 
     
 
-        { type: 'arabic', text: 'اللهُ اللهُ ۞ اللهُ رَبِّي لَا أُشْرِكُ بِهِ شَيْئًا ۞ اللَّهُمَّ إِنِّي أَسْأَلُكَ بِاسْمِكَ الْعَظِيمِ ۞ وَرِضْوَانِكَ الْأَكْبَرِ ۞ يَا ذَا الْجَلَالِ وَالْإِكْرَامِ ۞ أَنْ تَفْعَلَ بِي كَذَا  ۞' },
+       { type: 'arabic', text: 'اللهُ اللهُ ۞ اللهُ رَبِّي لَا أُشْرِكُ بِهِ شَيْئًا ۞ اللَّهُمَّ إِنِّي أَسْأَلُكَ بِاسْمِكَ الْعَظِيمِ ۞ وَرِضْوَانِكَ الْأَكْبَرِ ۞ يَا ذَا الْجَلَالِ وَالْإِكْرَامِ ۞ أَنْ تَفْعَلَ بِي كَذَا  ۞' },
         { type: 'text', text: 'Allah, Allah. Allah is my Rabb, I do not associate anything with Him. O Allah, I ask You by Your Great Name and Your Greatest Pleasure. O Owner of Majesty and Honor, that You do for me [such and such] (here, one mentions their specific need).' },
 
         { type: 'arabic', text: 'وَمَنْ تَكُنْ بِرَسُولِ اللهِ نُصْرَتُهُ إِنْ تَلْقَهُ الْأُسْدُ فِي آجَامِهَا تَجِمِ (7)' },
-        { type: 'text', text: 'And whoever has the support of the Messenger of Allah, if the lions encounter him in their thickets, they become silent and speechless out of awe. (Repeat 7 times)' },
+        { type: 'text', text: 'And whoever has the support of the Messenger of Allah, if the lions encounter him in their thickets, they become silent and speechless out of awe. (Repeat 7 times)' }, // Fixed: Added missing ' and )
 
         { type: 'arabic', text: 'يَا خَفِيَّ الْأَلْطَافِ نَجِّنَا مِمَّا نَخَافُ يَا حَيُّ حِينَ لَا حَيَّ فِي دَيْمُومِيَّةِ مُلْكِهِ وَبَقَائِهِ يَا حَيُّ (7)' },
         { type: 'text', text: 'O You who are hidden in subtle kindness, save us from what we fear. O Ever-Living One, when no living being remains—in the eternity of Your Sovereignty and the everlastingness of Your Existence. O Ever-Living One. (Repeat 7 times)' },
@@ -521,25 +521,25 @@
         { type: 'section-title', text: 'Comprehensive Duas' },
 
         { type: 'arabic', text: 'اللَّهُمَّ اغْفِرْلِي وَلِوَالِدَيَّ وَلِمَنْ تَوَالَدَ وَلِجَمِيعِ الْمُؤْمِنِينَ وَالْمُؤْمِنَاتِ وَالْمُسْلِمِينَ وَالْمُسْلِمَاتِ الْأَحْيَاءِ مِنْهُمْ وَالْأَمْوَاتِ إِنَّكَ مُجِيبُ الدَّعَوَاتِ بِرَحْمَتِكَ يَا أَرْحَمَ الرَّاحِمِينَ' },
-        { type: 'text', text: 'O Allah, forgive me, my parents, and all those who are born; and all the believing men and women, those who have submitted from the males and females, the living and the dead. Verily, You are the One Who answers prayers. Through Your Mercy, O the Most Merciful of those who show mercy.' },
+        { type: 'text', text: 'O Allah, forgive me, my parents, and all those who descended from them, and all believing men and believing women, and all Muslim men and Muslim women, those who are alive among them and those who are dead. Indeed, You are the Answerer of prayers, by Your mercy, O Most Merciful of the merciful.' },
 
         { type: 'arabic', text: 'اللَّهُمَّ رَبِّ اجْعَلْنِي مُقِيمَ الصَّلَاةِ وَمِنْ ذُرِّيَّتِي رَبَّنَا وَتَقَبَّلْ دُعَاءِي رَبَّنَا اغْفِرْ لِي وَلِوَالِدَيَّ وَلِلْمُؤْمِنِينَ يَوْمَ يَقُومُ الْحِسَابُ' },
-        { type: 'text', text: 'O Allah, my Rab. Make me establish the prayer, and my offspring; O our Lord! Accept my prayer. O Allah! Forgive me, and my parents, and all the believers on the Day when Reckoning will take place.' },
+        { type: 'text', text: 'O Allah, my Rab. Make me establish the prayer, and my offspring; O Allah! Accept my prayer. O Allah! Forgive me, and my parents, and all the believers on the Day when Reckoning will take place.' },
 
         { type: 'arabic', text: 'ٱللّٰهُمَّ ٱغْفِرْ وَٱرْحَمْ وَأَنْتَ خَيْرُ ٱلرَّاحِمِينَ، تَوَفَّنِي مُسْلِمًا وَأَلْحِقْنِي بِٱلصَّالِحِينَ' },
-        { type: 'text', text: 'Oh Allah! Accept the salat that I have performed! Forgive and pardon my relatives that have died. Cause me to die as a Muslim and join the righteous.' },
+        { type: 'text', text: '"O Allah, forgive and have mercy, for You are the best of those who show mercy. Cause me to die as a Muslim, and join me with the righteous.".' },
 
         { type: 'arabic', text: 'ٱللّٰهُمَّ ٱغْفِرْ لِي وَلِوَالِدَيَّ وَلِأُسْتَاذِيَّ وَلِلْمُؤْمِنِينَ وَٱلْمُؤْمِنَاتِ يَوْمَ يَقُومُ ٱلْحِسَابُ' },
-        { type: 'text', text: 'Oh Allah! Protect me from the evil of Satan, my enemies, and my nafs! Grant goodness and auspicious sustenance to our home! Grant salvation to Muslims and help those striving against unbelievers!' },
+        { type: 'text', text: '"O Allah, forgive me and my parents, and my teachers, and the believing men and believing women on the Day when the account is established."' },
 
         { type: 'arabic', text: 'ٱللّٰهُمَّ إِنَّكَ عَفُوٌّ كَرِيمٌ تُحِبُّ ٱلْعَفْوَ فَٱعْفُ عَنِّي' },
-        { type: 'text', text: 'Oh Allah! You are the One who pardons and forgets. You love to pardon, so pardon me. Grant recovery to the ill among us and relief to those in difficulty.' },
+        { type: 'text', text: 'O Allah, You are Most Forgiving, Most Generous; You love forgiveness, so forgive me.' },
 
         { type: 'arabic', text: 'ٱللّٰهُمَّ إِنِّي أَسْأَلُكَ ٱلصِّحَّةَ وَٱلْعَافِيَةَ وَٱلْأَمَانَةَ وَحُسْنَ ٱلْخُلُقِ وَٱلرِّضَاءَ بِٱلْقَدَرِ بِرَحْمَتِكَ يَا أَرْحَمَ ٱلرَّاحِمِينَ، آمِينَ' },
-        { type: 'text', text: 'Oh Allah! Grant a beneficial life, good morals, a sound mind, and steadfastness on the true path to my parents, my children, my relatives, my friends, and to all Muslims. Amin!' },
+        { type: 'text', text: 'O Allah, I ask You for health, well-being, trustworthiness, good character, and contentment with the divine decree, by Your mercy, O Most Merciful of the merciful. Amen' },
 
         { type: 'arabic', text: 'ٱلْحَمْدُ لِلّٰهِ رَبِّ الْعَالَمِينَ، وَٱلصَّلَاةُ وَٱلسَّلَامُ عَلَىٰ سَيِّدِنَا مُحَمَّدٍ وَعَلَىٰ آلِهِ وَصَحْبِهِ أَجْمَعِينَ' },
-        { type: 'text', text: 'Closing praise: All praise is due to Allah, and peace and blessings be upon our master Muhammad, his family, and all his companions.' }
+        { type: 'text', text: 'Closing praise: All praise is due to Allah, Lord of the worlds, and may peace and blessings be upon our master Muhammad, and upon his family and all his companions.' }
 
       ] 
     } 
