--- a/index.html
+++ b/index.html
@@ -1431,6 +1431,67 @@
                 { type: 'arabic-green', text: 'بِسْمِ اللهِ الرَّحْمَنِ الرَّحِيمِ' },
                 { type: 'hr' },
                 { type: 'arabic-green', text: 'فَعَسَى اللهُ أَنْ يَأْتِيَ بِالْفَتْحِ ۞ وَعِنْدَهُ مَفَاتِحُ الْغَيْبِ لَا يَعْلَمُهَا إِلَّا هُوَ ۞ رَبَّنَا افْتَحْ بَيْنَنَا وَبَيْنَ قَوْمِنَا بِالْحَقِّ وَأَنْتَ خَيْرُ الْفَاتِحِينَ ۞ وَلَوْ أَنَّ أَهْلَ الْقُرَى آمَنُوا وَاتَّقَوْا لَفَتَحْنَا عَلَيْهِمْ بَرَكَاتٍ مِنَ السَّمَاءِ وَالْأَرْضِ ۞ إِنْ تَسْتَفْتِحُوا فَقَدْ جَاءَكُمُ الْفَتْحُ ۞ رَبِّ إِنَّ قَوْمِي كَذَّبُونِ فَافْتَحْ بَيْنِي وَبَيْنَهُمْ فَتْحًا وَنَجِّنِي وَمَنْ مَعِي مِنَ الْمُؤْمِنِينَ ۞ مَا يَفْتَحِ اللهُ لِلنَّاسِ مِنْ رَحْمَةٍ فَلَا مُمْسِكَ لَهَا ۞ حَتَّى إِذَا جَاءُوهَا وَفُتِحَتْ أَبْوَابُهَا ۞ إِنَّا فَتَحْنَا لَكَ فَتْحًا مُبِينًا ۞ وَأَثَابَهُمْ فَتْحًا قَرِيبًا وَمَغَانِمَ كَثِيرَةً يَأْخُذُونَهَا ۞ فَفَتَحْنَا أَبْوَابَ السَّمَاءِ بِمَاءٍ مُنْهَمِرٍ ۞ نَصْرٌ مِنَ اللهِ وَفَتْحٌ قَرِيبٌ ۞ وَفُتِحَتِ السَّمَاءُ فَكَانَتْ أَبْوَابًا ۞ إِذَا جَاءَ نَصْرُ اللهِ وَالْفَتْحُ ۞ وَرَأَيْتَ النَّاسَ يَدْخُلُونَ فِي دِينِ اللهِ أَفْوَاجًا ۞ فَسَبِّحْ بِحَمْدِ رَبِّكَ وَاسْتَغْفِرْهُ إِنَّهُ كَانَ تَوَّابًا ۞' }
+            ]
+            },
+            {
+    "variant": "green",
+  "content": [
+    { "type": "flower-icon", "text": "❁ ❁ ❁" },
+    { "type": "title-green", "text": "Supplications for victory over enemies." },
+    { "type": "arabic-green", "text": " Comprehensive Supplications " },
+    { "type": "hr" },
+    { "type": "arabic-green", "text": "أَدْعِيَةُ النَّصْرِ عَلَى الْأَعْدَاءِ" },
+
+    { "type": "arabic-green", "text": "﴿ رَبَّنَا أَفْرِغْ عَلَيْنَا صَبْرًا وَثَبِّتْ أَقْدَامَنَا وَانْصُرْنَا عَلَى الْقَوْمِ الْكَافِرِينَ ﴾" },
+    { "type": "reference-small", "text": "[Surah Al-Baqarah, verse 250]." },
+
+    { "type": "arabic-green", "text": "﴿ أَنتَ مَوْلَانَا فَانصُرْنَا عَلَى الْقَوْمِ الْكَافِرِينَ ﴾" },
+    { "type": "reference-small", "text": "[Surah Al-Baqarah,verse 286]" },
+
+    { "type": "arabic-green", "text": "﴿ رَبَّنَا ﴿ وَاجْعَل لَّنَا مِن لَّدُنكَ وَلِيًّا وَاجْعَل لَّنَا مِن لَّدُنكَ نَصِيرًا ﴾" },
+    { "type": "reference-small", "text": "[Surah An-Nisā,verse 75]" },
+
+    { "type": "arabic-green", "text": "﴿ رَبِّ أَدْخِلْنِي مُدْخَلَ صِدْقٍ وَأَخْرِجْنِي مُخْرَجَ صِدْقٍ وَاجْعَلْ لِي مِنْ لَدُنكَ سُلْطَانًا نَصِيرًا ﴾" },
+    { "type": "reference-small", "text": "[Surah Al-Isrā’ (17:80)]" },
+
+    { "type": "arabic-green", "text": "﴿ رَبِّ نَجِّنِي مِنَ الْقَوْمِ الظَّالِمِينَ ﴾" },
+    { "type": "reference-small", "text": "[Surah Al-Qasas,verse 21]." },
+
+    { "type": "arabic-green", "text": "﴿ رَبِّ انصُرْنِي عَلَى الْقَوْمِ الْمُفْسِدِينَ ﴾" },
+    { "type": "reference-small", "text": "[Surah Al-Qasas,verse 30]." },
+
+    { "type": "arabic-green", "text": "﴿ رَبِّ فَلَا تَجْعَلْنِي فِي الْقَوْمِ الظَّالِمِينَ ﴾" },
+    { "type": "reference-small", "text": "[Surah Al-Mu’minūn,verse 94]." },
+
+    { "type": "arabic-green", "text": "﴿ رَبِّ أَعِنِّي وَلَا تُعِنْ عَلَيَّ، وَانْصُرْنِي وَلَا تَنْصُرْ عَلَيَّ، وَامْكُرْ لِي وَلَا تَمْكُرْ عَلَيَّ، وَاهْدِنِي وَيَسِّرْ الْهُدَى إِلَيَّ، وَانْصُرْنِي عَلَى مَنْ بَغَى عَلَيَّ، رَبِّ اجْعَلْنِي لَكَ شَاكِرًا، لَكَ ذَاكِرًا، لَكَ رَاهِبًا، لَكَ مِطْوَاعًا، إِلَيْكَ مُخْبِتًا، أَوْ مُنِيبًا، رَبِّ تَقَبَّلْ تَوْبَتِي، وَاغْسِلْ حَوْبَتِي، وَأَجِبْ دَعْوَتِي، وَثَبِّتْ حُجَّتِي، وَاهْدِ قَلْبِي، وَسَدِّدْ لِسَانِي، وَاسْلُلْ سَخِيمَةَ قَلْبِي»" },
+    { "type": "reference-small", "text": "Qur’an 17:80:, وصححه الألباني." },
+
+    { "type": "arabic-green", "text": "«اللَّهُمَّ إِنِّي أَعْجَلُكَ فِي نُحُورِهِمْ، وَأَعُوذُ بِكَ مِنْ شُرُورِهِمْ»" },
+    { "type": "reference-small", "text": "Musnad Ahmad 6719, ." },
+
+    { "type": "arabic-green", "text": "«اللَّهُمَّ أَنْتَ عَضُدِي وَنَصِيرِي، بِكَ أَحُولُ، وَبِكَ أَصُولُ، وَبِكَ أُقَاتِلُ»" },
+    { "type": "reference-small", "text": "Abu Dawud (2632)." },
+
+    { "type": "arabic-green", "text": "«اللَّهُمَّ رَبَّ السَّمَوَاتِ السَّبْعِ، وَرَبَّ الْعَرْشِ الْعَظِيمِ، كُنْ لِي جَارًا مِنْ فُلَانٍ بْنِ فُلَانٍ، وَأَحْزَابِهِ مِنْ خَلَائِقِكَ؛ أَنْ يَفْرُطَ عَلَيَّ أَحَدٌ مِنْهُمْ، أَوْ يَطْغَى، عَزَّ جَارُكَ، وَجَلَّ ثَنَاؤُكَ، وَلَا إِلَهَ إِلَّا أَنْتَ»" },
+    { "type": "reference-small", "text": "البخاري في الأدب المفرد (٧٠٧)." },
+
+    { "type": "arabic-green", "text": "«اللهُ أَكْبَرُ، اللهُ أَعَزُّ مِنْ خَلْقِهِ جَمِيعًا، اللهُ أَعَزُّ مِمَّا أَخَافُ وَأَحْذَرُ، وَأَعُوذُ بِاللهِ الَّذِي لَا إِلَهَ إِلَّا هُوَ، الْمُمْسِكِ السَّمَوَاتِ السَّبْعِ أَنْ يَقَعْنَ عَلَى الْأَرْضِ إِلَّا بِإِذْنِهِ، مِنْ شَرِّ عَبْدِكَ فُلَانٍ، وَجُنُودِهِ وَأَتْبَاعِهِ وَأَشْيَاعِهِ مِنَ الْجِنِّ وَالْإِنْسِ، اللَّهُمَّ كُنْ لِي جَارًا مِنْ شَرِّهِمْ، جَلَّ ثَنَاؤُكَ، وَعَزَّ جَارُكَ، وَتَبَارَكَ اسْمُكَ، وَلَا إِلَهَ إِلَّا غَيْرُكَ»" },
+    { "type": "reference-small", "text": "Al-Bukhari’s Al-Adab Al-Mufrad,no.708:." },
+
+    { "type": "arabic-green", "text": "«اللَّهُمَّ اكْفِنِيهِمْ بِمَا شِئْتَ»" },
+    { "type": "reference-small", "text": "Ahmad (23931) " },
+
+    { "type": "arabic-green", "text": "«اللَّهُمَّ مُنْزِلَ الْكِتَابِ، سَرِيعَ الْحِسَابِ، اهْزِمِ الْأَحْزَابَ، اللَّهُمَّ اهْزِمْهُمْ وَزَلْزِلْهُمْ»" },
+    { "type": "reference-small", "text": "“Ahmad (6719)" },
+
+    { "type": "arabic-green", "text": "«اللَّهُمَّ قَاتِلِ الْكَفَرَةَ الَّذِينَ يُكَذِّبُونَ رُسُلَكَ، وَيَصُدُّونَ عَنْ سَبِيلِكَ، وَاجْعَلْ عَلَيْهِمْ رِجْزَكَ وَعَذَابَكَ، اللَّهُمَّ قَاتِلِ الْكَفَرَةَ الَّذِينَ أُوتُوا الْكِتَابَ إِلَهَ الْحَقِّ»" },
+    { "type": "reference-small", "text": "“Ahmad (15492) " },
+
+    { "type": "arabic-green", "text": "«اللَّهُمَّ انْصُرِ الْمُسْتَضْعَفِينَ مِنَ الْمُسْلِمِينَ، اللَّهُمَّ إِنَّهُمْ حُفَاةٌ فَاحْمِلْهُمْ، اللَّهُمَّ إِنَّهُمْ عُرَاةٌ فَاكْسُهُمْ، اللَّهُمَّ إِنَّهُمْ جِيَاعٌ فَأَشْبِعْهُمْ»" },
+    { "type": "reference-small", "text": "“Abu Dawud (2747)" },
+
+    { "type": "arabic-green", "text": "«اللَّهُمَّ أَمْتِعْنِي بِسَمْعِي وَبَصَرِي، وَاجْعَلْهُمَا الْوَارِثَ مِنِّي، وَانْصُرْنِي عَلَى مَنْ ظَلَمَنِي، وَأَرِنِي فِيهِ ثَأْرِي»" },
+    { "type": "reference-small", "text": "الحاكم (١٩١٨)، وصححه." }
               ]
             }
           ]
