--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         { a: "مَا يَنۡظُرُوۡنَ اِلَّا صَيۡحَةً وَّاحِدَةً تَاۡخُذُهُمۡ وَهُمۡ يَخِصِّمُوۡنَ", e: "They await just one scream, which will overcome them while they are involved in worldly disputes." },
         { a: "فَلَا يَسۡتَطِيۡعُوۡنَ تَوۡصِيَةً وَّلَاۤ اِلٰٓى اَهۡلِهِمۡ يَرۡجِعُوۡنَ", e: "Therefore neither able to make a will, nor returning to their homes." },
         { a: "وَنُفِخَ فِى الصُّوۡرِ فَاِذَا هُمۡ مِّنَ الۡاَجۡدَاثِ اِلٰى رَبِّهِمۡ يَنۡسِلُوۡنَ", e: "And the Trumpet will be blown - so they will come forth from the graves, running towards their Lord." },
-        { a: "قَالُوۡا يٰوَيۡلَنَا مَنۡۢ بَعَثَنَا مِنۡ مَّرۡقَدِنَاۘؔ؄هٰذَا مَا وَعَدَ الرَّحۡمٰنُ وَصَدَقَ الۡمُرۡسَلُوۡنَ", e: "Saying, “O our misfortune! Who has raised us from our sleep? This is what the Most Gracious had promised, and the Noble Messengers had spoken the truth!”" },
+        { a: "قَالُوْا یٰوَیْلَنَا مَنْۢ بَعَثَنَا مِنْ مَرْقَدِنَا ۜ هٰذَا مَا وَعَدَ الرَّحْمٰنُ وَصَدَقَ الْمُرْسَلُوْنَ", e: "Saying, “O our misfortune! Who has raised us from our sleep? This is what the Most Gracious had promised, and the Noble Messengers had spoken the truth!”" },
         { a: "اِنۡ كَانَتۡ اِلَّا صَيۡحَةً وَّاحِدَةً فَاِذَا هُمۡ جَمِيۡعٌ لَّدَيۡنَا مُحۡضَرُوۡنَ", e: "It is just one scream, and every one of them will be brought together before Us!" },
         { a: "فَالۡيَوۡمَ لَا تُظۡلَمُ نَفۡسٌ شَيۡـــًٔا وَّلَا تُجۡزَوۡنَ اِلَّا مَا كُنۡتُمۡ تَعۡمَلُوۡنَ", e: "So this day no soul will be wronged in the least; and you will not be compensated except for your deeds." },
         { a: "اِنَّ اَصۡحٰبَ الۡجَـنَّةِ الۡيَوۡمَ فِىۡ شُغُلٍ فٰكِهُوۡنَ", e: "Indeed this day the dwellers of Paradise are in comfort, with blissful hearts." },
@@ -235,8 +235,8 @@
         { a: "وَضَرَبَ لَـنَا مَثَلًا وَّ نَسِىَ خَلۡقَهٗ‌ ؕ قَالَ مَنۡ يُّحۡىِ الۡعِظَامَ وَهِىَ رَمِيۡمٌ", e: "And he invents an example for Us, while forgetting his own creation, saying, “Who is such that can revive the bones when they have completely rotted away?”" },
         { a: "قُلۡ يُحۡيِيۡهَا الَّذِىۡۤ اَنۡشَاَهَاۤ اَوَّلَ مَرَّةٍ‌ ؕ وَهُوَ بِكُلِّ خَلۡقٍ عَلِيۡمُ", e: "Proclaim (O dear Prophet Mohammed - peace and blessings be upon him), “They will be revived by the One Who created them the first time; and He is the All Knowing of every creation.”" },
         { a: "اۨلَّذِىۡ جَعَلَ لَـكُمۡ مِّنَ الشَّجَرِ الۡاَخۡضَرِ نَارًا فَاِذَاۤ اَنۡـتُمۡ مِّنۡهُ تُوۡقِدُوۡنَ", e: "“The One Who has created for you fire from the green tree, so you kindle from it.”" },
-        { a: "اَوَلَيۡسَ الَّذِىۡ خَلَقَ السَّمٰوٰتِ وَالۡاَرۡضَ بِقٰدِرٍ عَلٰٓى اَنۡ يَّخۡلُقَ مِثۡلَهُمۡؔؕ بَلٰی وَهُوَ الۡخَـلّٰقُ الۡعَلِيۡمُ", e: "And is it not possible for the One Who created the heavens and the earth to create the likes of them? It is surely possible, why not? And He is the Great Creator, the All Knowing of everything." },
-        { a: "اِنَّمَاۤ اَمۡرُهٗۤ اِذَاۤ اَرَادَ شَیْــٴً۬ــا اَنۡ يَّقُوۡلَ لَهٗ كُنۡ فَيَكُوۡنُ", e: "And His only task when He intends a thing is to command it, “Be” - and it thereupon happens!" },
+        { a: "وَلَيْسَ الَّذِيْ خَلَقَ السَّمٰوٰتِ وَالْاَرْضَ بِقٰدِرٍ عَلٰٓى اَنْ يَّخْلُقَ مِثْلَهُمْ ۗ بَلٰی وَهُوَ الْخَلّٰقُ الْعَلِيْمُ ", e: "And is it not possible for the One Who created the heavens and the earth to create the likes of them? It is surely possible, why not? And He is the Great Creator, the All Knowing of everything." },
+        { a: "اِنَّمَاۤ اَمْرُهٗۤ اِذَاۤ اَرَادَ شَيْـًٔا اَنْ يَّقُوْلَ لَهٗ كُنْ فَيَكُوْنُ", e: "And His only task when He intends a thing is to command it, “Be” - and it thereupon happens!" },
         { a: "فَسُبۡحٰنَ الَّذِىۡ بِيَدِهٖ مَلَـكُوۡتُ كُلِّ شَىۡءٍ وَّاِلَيۡهِ تُرۡجَعُوۡنَ", e: "Therefore Purity is to Him in Whose Hand is the control over all things and it is towards Him that you will be returned." }
       ];
 
